kubeflow/manifests/kubeflow-gateway.yaml
%{ endif }
%{ if credential_name != "" || use_cert_manager }
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: ${namespace}
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: %{ if use_cert_manager ~}kubeflow-cert%{ else ~}${credential_name}%{ endif }
    hosts:
      - kubeflow.${domain_name}
---
%{ endif }
