kubeflow/manifests/metadata-application-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
%{ for key,value in labels ~}
    ${key}: ${value}
%{ endfor ~}
  name: metadata-grpc
  namespace: ${namespace}
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - kubeflow.${domain_name}
  http:
    - match:
        - uri:
            prefix: /ml_metadata
      rewrite:
        uri: /ml_metadata
      route:
        - destination:
            host: metadata-envoy-service.kubeflow.svc.cluster.local
            port:
              number: 9090
      timeout: 300s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
%{ for key,value in labels ~}
    ${key}: ${value}
%{ endfor ~}
  name: metadata-ui
  namespace: ${namespace}
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - kubeflow.${domain_name}
  http:
    - match:
        - uri:
            prefix: /metadata
      rewrite:
        uri: /metadata
      route:
        - destination:
            host: metadata-ui.kubeflow.svc.cluster.local
            port:
              number: 80
      timeout: 300s
