kubeflow/manifests/pipelines-ui-application-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
%{ for key,value in labels ~}
    ${key}: ${value}
%{ endfor ~}
  name: ml-pipeline-tensorboard-ui
  namespace: ${namespace}
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - kubeflow.${domain_name}
  http:
  - match:
    - uri:
        prefix: /data
    rewrite:
      uri: /data
    route:
    - destination:
        host: ml-pipeline-tensorboard-ui.kubeflow.svc.cluster.local
        port:
          number: 80
    timeout: 300s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
%{ for key,value in labels ~}
    ${key}: ${value}
%{ endfor ~}
  name: ml-pipeline-ui
  namespace: ${namespace}
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - kubeflow.${domain_name}
  http:
  - match:
    - uri:
        prefix: /pipeline
    rewrite:
      uri: /pipeline
    route:
    - destination:
        host: ml-pipeline-ui.kubeflow.svc.cluster.local
        port:
          number: 80
    timeout: 300s
